--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "version": "0.1.2",
   "files": [
-    "user-profile-card.js"
+    "user-profile-card.js",
+    "/lang"
   ],
   "scripts": {
     "lint": "npm run lint:eslint && npm run lint:lit",
