--- a/package.json
+++ b/package.json
@@ -23,14 +23,13 @@
   "author": "D2L Corporation",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@babel/eslint-parser": "^7",
     "@open-wc/testing": "^2",
     "@open-wc/testing-karma": "^3",
     "@webcomponents/webcomponentsjs": "^2",
-    "babel-eslint": "^10",
     "deepmerge": "^3",
     "es-dev-server": "^1",
-    "eslint": "^6",
-    "eslint-config-brightspace": "^0.6.7",
+    "eslint-config-brightspace": "^0.13.1",
     "eslint-plugin-html": "^6",
     "eslint-plugin-lit": "^1",
     "eslint-plugin-sort-class-members": "^1",
