--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "brightspace/lit-config"
+  "extends": "brightspace/lit-config",
+  "overrides": [{
+    "files": [
+      "**/demo/**.html" ],
+    "rules": {
+      "no-console": 0
+    }
+  }]
 }
