--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@webcomponents/webcomponentsjs": "^2",
     "deepmerge": "^3",
     "es-dev-server": "^1",
+    "eslint": "^6",
     "eslint-config-brightspace": "^0.13.1",
     "eslint-plugin-html": "^6",
     "eslint-plugin-lit": "^1",
