♻️ Made opener internal user-profile-image

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
+    "d2l-users": "github:BrightspaceHypermediaComponents/users#semver:^2",
     "lit-element": "^2"
   }
 }
