--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@webcomponents/webcomponentsjs": "^2",
     "deepmerge": "^3",
     "es-dev-server": "^1",
-    "eslint": "^6",
+    "eslint": "^7",
     "eslint-config-brightspace": "^0.13.1",
     "eslint-plugin-html": "^6",
     "eslint-plugin-lit": "^1",
@@ -39,6 +39,7 @@
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
+    "d2l-users": "github:BrightspaceHypermediaComponents/users#semver:^2",
     "lit-element": "^2"
   }
 }
