Adding html-block renderer plugin for @mentions.

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "version": "0.3.0",
   "files": [
     "user-profile-card.js",
+    "user-profile-html-block.js",
     "/lang"
   ],
   "scripts": {
