--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "version": "0.4.0",
   "files": [
+    "localize-user-profile-card.js",
     "user-profile-card.js",
     "user-profile-html-block.js",
     "/lang"
