--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
+    "d2l-hypermedia-constants": "^6.40.0",
     "d2l-users": "github:BrightspaceHypermediaComponents/users#semver:^2",
     "lit-element": "^2"
   }
