✨ Added OrgDefinedID and Updated Tests Co-authored-by: Viktor Yakovlyev <vix633@users.noreply.github.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
   "extends": "brightspace/lit-config",
+  "ignorePatterns": ["**/test/screenshots/**/*.html"],
   "overrides": [{
     "files": [
       "**/demo/**.html" ],
