--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "eslint": "^7",
     "eslint-config-brightspace": "^0.13.1",
     "eslint-plugin-html": "^6",
-    "eslint-plugin-lit": "^1",
+    "eslint-plugin-lit": "1.4.1",
     "eslint-plugin-sort-class-members": "^1",
     "karma-sauce-launcher": "^2",
     "lit-analyzer": "^1"
