--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "eslint-plugin-lit": "1.4.1",
     "eslint-plugin-sort-class-members": "^1",
     "karma-sauce-launcher": "^2",
-    "lit-analyzer": "^1"
+    "lit-analyzer": "^1",
+    "sinon": "^11.1.1"
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
