--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-sort-class-members": "^1",
     "karma-sauce-launcher": "^2",
     "lit-analyzer": "^1",
+    "mocha": "^8",
     "sinon": "^9.0.2"
   },
   "dependencies": {
