--- a/package.json
+++ b/package.json
@@ -27,20 +27,23 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7",
     "@open-wc/testing": "^2",
-    "@open-wc/testing-karma": "^3",
+    "@open-wc/testing-karma": "^4.0.9",
     "@webcomponents/webcomponentsjs": "^2",
     "deepmerge": "^3",
     "es-dev-server": "^1",
     "eslint": "^7",
     "eslint-config-brightspace": "^0.13.1",
     "eslint-plugin-html": "^6",
-    "eslint-plugin-lit": "^1",
+    "eslint-plugin-lit": "1.4.1",
     "eslint-plugin-sort-class-members": "^1",
     "karma-sauce-launcher": "^2",
-    "lit-analyzer": "^1"
+    "lit-analyzer": "^1",
+    "mocha": "^8",
+    "sinon": "^9.0.2"
   },
   "dependencies": {
     "@brightspace-ui/core": "^1",
+    "d2l-hypermedia-constants": "^6.40.0",
     "d2l-users": "github:BrightspaceHypermediaComponents/users#semver:^2",
     "lit-element": "^2"
   }
